--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.4",
+    "aos": "^2.3.4",
     "firebase": "^10.5.0",
     "flowbite": "^1.8.1",
     "localforage": "^1.10.0",
